test-data/gce2/json-dumps/compute-effective-firewalls-default.json
{
  "firewalls": [
    {
      "kind": "compute#firewall",
      "id": "6654944905093765942",
      "creationTimestamp": "2023-11-03T14:27:53.667-07:00",
      "name": "default-allow-icmp",
      "description": "Allow ICMP from anywhere",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/global/networks/default",
      "priority": 65534,
      "sourceRanges": [
        "0.0.0.0/0"
      ],
      "allowed": [
        {
          "IPProtocol": "icmp"
        }
      ],
      "direction": "INGRESS",
      "logConfig": {
        "enable": false
      },
      "disabled": false,
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/global/firewalls/default-allow-icmp"
    },
    {
      "kind": "compute#firewall",
      "id": "4341098039640382262",
      "creationTimestamp": "2023-11-03T14:27:53.660-07:00",
      "name": "default-allow-ssh",
      "description": "Allow SSH from anywhere",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/global/networks/default",
      "priority": 65534,
      "sourceRanges": [
        "0.0.0.0/0"
      ],
      "allowed": [
        {
          "IPProtocol": "tcp",
          "ports": [
            "22"
          ]
        }
      ],
      "direction": "INGRESS",
      "logConfig": {
        "enable": false
      },
      "disabled": false,
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/global/firewalls/default-allow-ssh"
    },
    {
      "kind": "compute#firewall",
      "id": "3384956594912865471",
      "creationTimestamp": "2023-11-05T14:08:16.385-08:00",
      "name": "gce-secured-instance-test-allow",
      "description": "",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/global/networks/default",
      "priority": 900,
      "sourceRanges": [
        "0.0.0.0/0",
        "35.235.240.0/20"
      ],
      "targetTags": [
        "faulty-ssh-instance"
      ],
      "allowed": [
        {
          "IPProtocol": "tcp",
          "ports": [
            "22"
          ]
        }
      ],
      "direction": "INGRESS",
      "logConfig": {
        "enable": false
      },
      "disabled": false,
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/global/firewalls/gce-secured-instance-test-allow"
    },
    {
      "kind": "compute#firewall",
      "id": "2430705094709795638",
      "creationTimestamp": "2023-11-03T14:27:53.657-07:00",
      "name": "default-allow-internal",
      "description": "Allow internal traffic on the default network",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/global/networks/default",
      "priority": 65534,
      "sourceRanges": [
        "10.128.0.0/9"
      ],
      "allowed": [
        {
          "IPProtocol": "tcp",
          "ports": [
            "0-65535"
          ]
        },
        {
          "IPProtocol": "udp",
          "ports": [
            "0-65535"
          ]
        },
        {
          "IPProtocol": "icmp"
        }
      ],
      "direction": "INGRESS",
      "logConfig": {
        "enable": false
      },
      "disabled": false,
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/global/firewalls/default-allow-internal"
    },
    {
      "kind": "compute#firewall",
      "id": "4126568254316010294",
      "creationTimestamp": "2023-11-03T14:27:53.664-07:00",
      "name": "default-allow-rdp",
      "description": "Allow RDP from anywhere",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/global/networks/default",
      "priority": 65534,
      "sourceRanges": [
        "0.0.0.0/0"
      ],
      "allowed": [
        {
          "IPProtocol": "tcp",
          "ports": [
            "3389"
          ]
        }
      ],
      "direction": "INGRESS",
      "logConfig": {
        "enable": false
      },
      "disabled": false,
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/global/firewalls/default-allow-rdp"
    },
    {
      "kind": "compute#firewall",
      "id": "8244892118186044576",
      "creationTimestamp": "2023-11-05T14:08:15.743-08:00",
      "name": "gce-secured-instance-test-deny",
      "description": "",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/global/networks/default",
      "priority": 900,
      "sourceRanges": [
        "0.0.0.0/0",
        "35.235.240.0/20"
      ],
      "targetTags": [
        "faulty-ssh-instance"
      ],
      "denied": [
        {
          "IPProtocol": "tcp",
          "ports": [
            "22"
          ]
        }
      ],
      "direction": "INGRESS",
      "logConfig": {
        "enable": false
      },
      "disabled": false,
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/global/firewalls/gce-secured-instance-test-deny"
    }
  ]
}
