test-data/gce2/json-dumps/compute-network-default.json
{
  "autoCreateSubnetworks": true,
  "creationTimestamp": "2023-11-03T14:27:06.884-07:00",
  "description": "Default network for the project",
  "id": "4415164866624019269",
  "kind": "compute#network",
  "name": "default",
  "networkFirewallPolicyEnforcementOrder": "AFTER_CLASSIC_FIREWALL",
  "routingConfig": {
    "routingMode": "REGIONAL"
  },
  "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/global/networks/default",
  "selfLinkWithId": "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/global/networks/4415164866624019269",
  "subnetworks": [
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/regions/asia-southeast2/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/regions/us-east7/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/regions/us-west2/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/regions/me-central2/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/regions/us-east1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/regions/europe-west10/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/regions/me-west1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/regions/northamerica-northeast1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/regions/asia-northeast3/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/regions/us-east4/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/regions/me-central1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/regions/australia-southeast1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/regions/asia-northeast1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/regions/us-east5/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/regions/europe-central2/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/regions/europe-west1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/regions/asia-east1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/regions/asia-south2/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/regions/asia-southeast1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/regions/us-west1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/regions/europe-west2/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/regions/asia-northeast2/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/regions/southamerica-east1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/regions/europe-west9/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/regions/asia-south1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/regions/us-west3/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/regions/europe-west6/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/regions/europe-north1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/regions/europe-west3/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/regions/southamerica-west1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/regions/australia-southeast2/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/regions/asia-east2/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/regions/europe-west8/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/regions/northamerica-northeast2/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/regions/us-south1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/regions/europe-west4/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/regions/europe-southwest1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/regions/us-central1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/regions/us-west4/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce-faultyssh-runbook/regions/europe-west12/subnetworks/default"
  ]
}
