test-data/gce2/json-dumps/compute-subnetwork-policy.json
{
  "bindings": [
    {
      "members": [
        "serviceAccount:gke1sa@gcpdiag-gke1-aaaa.iam.gserviceaccount.com"
      ],
      "role": "roles/compute.networkUser"
    }
  ],
  "etag": "BwXba-kLoiA=",
  "version": 1
}
